--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -165,6 +165,9 @@ width: 80%;
 .contact-us .subHeader{
   font-size: 45px;
 }
+.contact-us .location .left{
+  padding: 0;
+}
 .contact-us .location .left .wrapper .icons img{
   width: 30px;
   height: 30px;
