--- a/src/components/aboutheader/aboutheader.css
+++ b/src/components/aboutheader/aboutheader.css
@@ -53,18 +53,19 @@
 
 .info .details,.info img{
   width: 50%;
+  border-radius: 12px;
 }
 
 .info .details h3{
-  font-size: 22px;
+  font-size: 36px;
   font-weight: 500;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   text-align: center;
 }
 
 .info .details p{
-  line-height: 50px;
-  font-size: 18px;
+  line-height: 35px;
+  font-size: 22px;
   font-weight: 400;
   padding: 15px;
 }
