--- a/src/components/modals/packageDetails/packageDetails.css
+++ b/src/components/modals/packageDetails/packageDetails.css
@@ -5,7 +5,6 @@
 .slick-prev:before,
 .slick-next:before{
   background-color: #08AFE4;
-  font-size: 42px;
 }
 .slick-next:before{
 content: '→';
@@ -246,9 +245,22 @@ margin-bottom: 20px;
 
 }
 
+@media (max-width: 1100px) {
+  .card-wrapper{
+    padding-bottom: 65px;
+  }
+}
 @media (max-width: 600px) {
+  .card-wrapper{
+    padding-bottom: 40px;
+  }
 .package-details .card-wrapper .types .type-card .details-wrapper > div{
   font-size: 14px;
     padding:3px;
+}
+.next,
+.back{
+font-size: 16px;
+padding: 6px 15px;
 }
 }
