--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -8,7 +8,6 @@ nav {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
-  padding: 0 20px;
 }
 
 nav .left img{
@@ -22,6 +21,14 @@ align-items: center;
 gap: 35px;
 font-size: 24px;
 font-weight: 600;
+}
+
+nav .center li a{
+  color: #304444;
+}
+
+nav .center li a:hover{
+  color: #1DBEC8;
 }
 
 nav .right{
@@ -156,7 +163,6 @@ font-size: 24px;
 @media (max-width: 700px) {
 nav{
   justify-content: start;
-  padding: 0;
 }
 nav .left img{
   width: 100px;
